# RestAPIs_Using_Python_SQLAlchemy

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
metr/: api.py  database.py  models.py
tests/: conftest.py  factories.py
tests/integration/: test_api_smoke.py  test_api_validation.py
tests/unit/: test_api_server.py
