[tool.poetry]
name = "metr"
version = "0.1.0"
description = ""
authors = ["Gorilla <hello@gorilla.co>"]

[tool.poetry.dependencies]
python = "^3.11"

aws-lambda-typing = "^2.20"
SQLAlchemy = "^2.0.30"
pydantic = "^2.9.1"

[tool.poetry.dev-dependencies]
black = "^24.4"
coverage = "^7.5.0"
flake8 = "^7.0.0"
isort = "^5.13.0"
mypy = "^1.10.0"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
